# qt-gh-actions-demo

./: CMakeLists.txt  main.cpp  test_main.cpp
.github/workflows/: build.yml
